tests/invalidprograms/context/undeclared_identifier.tds
Program {
	Int main() {
		x = x + 1;
		return 0;
	}
}

